added more information

--- a/home.html
+++ b/home.html
@@ -14,9 +14,15 @@
 
 <body>
 
+    <div class="jumbotron text-center">
+        <h1>Welcome to my Game Website</h1>
+        <p>Designed by Symon!</p>
+      </div>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-4 columns">
+                <div class="about">LEAGUE OF LEGENDS</div>
                 <div class="lg">
                     <a href="lg_details.html"><img src="images/PassportSize.jpg" alt="" class="lg">
                         <div class="about">I love league of legends</div>
@@ -24,6 +30,7 @@
                 </div>
             </div>
             <div class="col-sm-4 columns">
+                <div class="about">GAME B</div>
                 <div class="lg">
                     <a href="lg_details.html"><img src="images/PassportSize.jpg" alt="" class="lg">
                         <div class="about">I love league of legends</div>
@@ -31,6 +38,7 @@
                 </div>
             </div>
             <div class="col-sm-4 columns">
+                <div class="about">ANOTHER GAME</div>
                 <div class="lg">
                     <a href="lg_details.html"><img src="images/PassportSize.jpg" alt="" class="lg">
                         <div class="about">I love league of legends</div>
